Add llvm and pkg-config versions

--- a/ui/deploy_tool.ui
+++ b/ui/deploy_tool.ui
@@ -40,7 +40,7 @@
        <bool>true</bool>
       </property>
       <property name="currentIndex">
-       <number>2</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="tab_thispc">
        <attribute name="title">
@@ -71,83 +71,29 @@
            <property name="spacing">
             <number>3</number>
            </property>
-           <item row="7" column="4">
-            <widget class="QPushButton" name="btn_install_sysroot">
-             <property name="text">
-              <string>Install Sysroot Package</string>
-             </property>
-            </widget>
-           </item>
-           <item row="7" column="2" colspan="2">
-            <widget class="QLineEdit" name="txt_sysroot">
-             <property name="readOnly">
-              <bool>true</bool>
-             </property>
-            </widget>
-           </item>
-           <item row="9" column="4">
-            <widget class="QLabel" name="label_27">
-             <property name="text">
-              <string>&lt;center&gt;&lt;a href=&quot;https://www.python.org/&quot;&gt;&lt;span&gt;Download&lt;/span&gt;&lt;/a&gt;&lt;/center&gt;</string>
-             </property>
-             <property name="openExternalLinks">
-              <bool>true</bool>
-             </property>
-             <property name="textInteractionFlags">
-              <set>Qt::TextBrowserInteraction</set>
-             </property>
-            </widget>
-           </item>
-           <item row="5" column="2" colspan="2">
-            <widget class="QLineEdit" name="txt_cmake_version">
-             <property name="readOnly">
-              <bool>true</bool>
-             </property>
-            </widget>
-           </item>
-           <item row="8" column="0" colspan="5">
-            <widget class="QLabel" name="label_25">
+           <item row="4" column="0" colspan="5">
+            <widget class="QLabel" name="label_19">
              <property name="font">
               <font>
                <bold>true</bold>
               </font>
              </property>
              <property name="text">
-              <string>Python Development Tools</string>
+              <string>C++ Development Tools</string>
              </property>
             </widget>
            </item>
-           <item row="7" column="1">
-            <widget class="QLabel" name="label_23">
+           <item row="2" column="1">
+            <widget class="QLabel" name="label_5">
              <property name="text">
-              <string>ArPiRobot Sysroots</string>
+              <string>ArPiRobot CoreLib Version</string>
              </property>
             </widget>
            </item>
-           <item row="9" column="2" colspan="2">
-            <widget class="QLineEdit" name="txt_pc_python_version">
-             <property name="readOnly">
-              <bool>true</bool>
-             </property>
-            </widget>
-           </item>
-           <item row="5" column="4">
-            <widget class="QLabel" name="label_22">
+           <item row="9" column="4">
+            <widget class="QPushButton" name="btn_install_sysroot">
              <property name="text">
-              <string>&lt;center&gt;&lt;a href=&quot;https://cmake.org/&quot;&gt;&lt;span&gt;Download&lt;/span&gt;&lt;/a&gt;&lt;/center&gt;</string>
-             </property>
-             <property name="openExternalLinks">
-              <bool>true</bool>
-             </property>
-             <property name="textInteractionFlags">
-              <set>Qt::TextBrowserInteraction</set>
-             </property>
-            </widget>
-           </item>
-           <item row="5" column="1">
-            <widget class="QLabel" name="label_21">
-             <property name="text">
-              <string>CMake Version</string>
+              <string>Install Sysroot Package</string>
              </property>
             </widget>
            </item>
@@ -163,10 +109,52 @@
              </property>
             </widget>
            </item>
-           <item row="2" column="1">
-            <widget class="QLabel" name="label_5">
+           <item row="9" column="1">
+            <widget class="QLabel" name="label_23">
              <property name="text">
-              <string>ArPiRobot CoreLib Version</string>
+              <string>ArPiRobot Sysroots</string>
+             </property>
+            </widget>
+           </item>
+           <item row="7" column="1">
+            <widget class="QLabel" name="label_20">
+             <property name="text">
+              <string>Ninja Version</string>
+             </property>
+            </widget>
+           </item>
+           <item row="6" column="1">
+            <widget class="QLabel" name="label_21">
+             <property name="text">
+              <string>CMake Version</string>
+             </property>
+            </widget>
+           </item>
+           <item row="5" column="1">
+            <widget class="QLabel" name="label_29">
+             <property name="text">
+              <string>LLVM Version</string>
+             </property>
+            </widget>
+           </item>
+           <item row="7" column="2" colspan="2">
+            <widget class="QLineEdit" name="txt_ninja_version">
+             <property name="readOnly">
+              <bool>true</bool>
+             </property>
+            </widget>
+           </item>
+           <item row="6" column="2" colspan="2">
+            <widget class="QLineEdit" name="txt_cmake_version">
+             <property name="readOnly">
+              <bool>true</bool>
+             </property>
+            </widget>
+           </item>
+           <item row="11" column="1">
+            <widget class="QLabel" name="label_26">
+             <property name="text">
+              <string>Python Interpreter Version(s)</string>
              </property>
             </widget>
            </item>
@@ -183,10 +171,10 @@
              </property>
             </widget>
            </item>
-           <item row="9" column="1">
-            <widget class="QLabel" name="label_26">
+           <item row="2" column="4">
+            <widget class="QPushButton" name="btn_install_update">
              <property name="text">
-              <string>Python Interpreter Version(s)</string>
+              <string>Install Update Package</string>
              </property>
             </widget>
            </item>
@@ -213,47 +201,52 @@
              </property>
             </spacer>
            </item>
-           <item row="4" column="0" colspan="5">
-            <widget class="QLabel" name="label_19">
+           <item row="10" column="0" colspan="5">
+            <widget class="QLabel" name="label_25">
              <property name="font">
               <font>
                <bold>true</bold>
               </font>
              </property>
              <property name="text">
-              <string>C++ Development Tools</string>
+              <string>Python Development Tools</string>
              </property>
             </widget>
            </item>
-           <item row="2" column="4">
-            <widget class="QPushButton" name="btn_install_update">
-             <property name="text">
-              <string>Install Update Package</string>
-             </property>
-            </widget>
-           </item>
-           <item row="6" column="1">
-            <widget class="QLabel" name="label_20">
-             <property name="text">
-              <string>Ninja Version</string>
-             </property>
-            </widget>
-           </item>
-           <item row="6" column="4">
-            <widget class="QLabel" name="lbl_ninja_download">
-             <property name="text">
-              <string>&lt;center&gt;&lt;a href=&quot;https://ninja-build.org/&quot;&gt;&lt;span&gt;Download&lt;/span&gt;&lt;/a&gt;&lt;/center&gt;</string>
-             </property>
-             <property name="openExternalLinks">
+           <item row="11" column="2" colspan="2">
+            <widget class="QLineEdit" name="txt_pc_python_version">
+             <property name="readOnly">
               <bool>true</bool>
              </property>
-             <property name="textInteractionFlags">
-              <set>Qt::TextBrowserInteraction</set>
+            </widget>
+           </item>
+           <item row="9" column="2" colspan="2">
+            <widget class="QLineEdit" name="txt_sysroot">
+             <property name="readOnly">
+              <bool>true</bool>
              </property>
             </widget>
            </item>
-           <item row="6" column="2" colspan="2">
-            <widget class="QLineEdit" name="txt_ninja_version"/>
+           <item row="8" column="1">
+            <widget class="QLabel" name="label_30">
+             <property name="text">
+              <string>pkg-config Version</string>
+             </property>
+            </widget>
+           </item>
+           <item row="5" column="2" colspan="2">
+            <widget class="QLineEdit" name="txt_llvm_version">
+             <property name="readOnly">
+              <bool>true</bool>
+             </property>
+            </widget>
+           </item>
+           <item row="8" column="2" colspan="2">
+            <widget class="QLineEdit" name="txt_pkgconfig_version">
+             <property name="readOnly">
+              <bool>true</bool>
+             </property>
+            </widget>
            </item>
           </layout>
          </widget>
