--- a/ui/deploy_tool.ui
+++ b/ui/deploy_tool.ui
@@ -415,6 +415,35 @@
          </widget>
         </item>
         <item>
+         <widget class="QLabel" name="label_22">
+          <property name="text">
+           <string>Advanced:</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="btn_relaunch_debug">
+          <property name="text">
+           <string>Relaunch Under Debug Server</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="label_27">
+          <property name="font">
+           <font>
+            <italic>true</italic>
+           </font>
+          </property>
+          <property name="text">
+           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-style:italic;&quot;&gt;Relaunches the currently deployed program&lt;br/&gt;under a debug server so a remote client can attach&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignCenter</set>
+          </property>
+         </widget>
+        </item>
+        <item>
          <spacer name="verticalSpacer_3">
           <property name="orientation">
            <enum>Qt::Vertical</enum>
