--- a/ui/deploy_tool.ui
+++ b/ui/deploy_tool.ui
@@ -40,7 +40,7 @@
        <bool>true</bool>
       </property>
       <property name="currentIndex">
-       <number>2</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="tab_thispc">
        <attribute name="title">
@@ -717,10 +717,7 @@
           <property name="title">
            <string>Robot Actions</string>
           </property>
-          <layout class="QHBoxLayout" name="horizontalLayout_2">
-           <property name="spacing">
-            <number>3</number>
-           </property>
+          <layout class="QGridLayout" name="gridLayout_7">
            <property name="leftMargin">
             <number>3</number>
            </property>
@@ -733,45 +730,45 @@
            <property name="bottomMargin">
             <number>3</number>
            </property>
-           <item>
+           <item row="0" column="5">
+            <widget class="QPushButton" name="btn_make_writable">
+             <property name="text">
+              <string>Make Read/Write</string>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="0">
             <widget class="QPushButton" name="btn_shutdown">
              <property name="text">
               <string>Shutdown</string>
              </property>
             </widget>
            </item>
-           <item>
+           <item row="0" column="1">
             <widget class="QPushButton" name="btn_reboot">
              <property name="text">
               <string>Reboot</string>
              </property>
             </widget>
            </item>
-           <item>
-            <widget class="QPushButton" name="btn_restart_program">
-             <property name="text">
-              <string>Restart Program</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QPushButton" name="btn_debug_program">
-             <property name="text">
-              <string>Debug Program</string>
-             </property>
-            </widget>
-           </item>
-           <item>
+           <item row="0" column="4">
             <widget class="QPushButton" name="btn_readonly">
              <property name="text">
               <string>Make Readonly</string>
              </property>
             </widget>
            </item>
-           <item>
-            <widget class="QPushButton" name="btn_make_writable">
+           <item row="1" column="0" colspan="2">
+            <widget class="QPushButton" name="btn_restart_program">
              <property name="text">
-              <string>Make Read/Write</string>
+              <string>Restart Robot Program</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="4" colspan="2">
+            <widget class="QPushButton" name="btn_debug_program">
+             <property name="text">
+              <string>Debug Robot Program</string>
              </property>
             </widget>
            </item>
@@ -1143,7 +1140,6 @@ Supported options depend on robot's computer</string>
   <tabstop>txt_python_version</tabstop>
   <tabstop>btn_shutdown</tabstop>
   <tabstop>btn_reboot</tabstop>
-  <tabstop>btn_restart_program</tabstop>
   <tabstop>btn_readonly</tabstop>
   <tabstop>btn_make_writable</tabstop>
   <tabstop>txt_hostname</tabstop>
